--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^5.1.0
-  flutter_launcher_icons: ^0.13.1  
+  flutter_launcher_icons: ^0.13.1 
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.jpg"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/icons/play_store_512.png" 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -77,6 +84,7 @@ flutter:
     - assets/images/core/no_network.jpg
     - assets/images/core/splash.jpg
     - assets/images/core/page_under_build.jpg
+    - assets/icons/play_store_512.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
