--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   connectivity_plus: ^6.0.3
   flutter_dotenv: ^5.1.0
   flutter_screenutil: ^5.9.0
+  flutter_native_splash: ^2.4.0
   
   # Firebase
   firebase_core: ^2.30.1
@@ -85,6 +86,9 @@ flutter:
     - assets/images/core/splash.jpg
     - assets/images/core/page_under_build.jpg
     - assets/icons/play_store_512.png
+    - assets/images/core/splash_ios_android_11.png
+    - assets/images/core/splash_android_12.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
