--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,16 +21,16 @@ dependencies:
   flutter_localization: ^0.2.0
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.0
-  
   freezed_annotation: ^2.4.1
+  get_it: ^7.7.0
   shared_preferences: ^2.2.3
 
 dev_dependencies:
   build_runner: ^2.4.9
-  freezed: ^2.5.2
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.2
   very_good_analysis: ^5.1.0
 
 flutter_icons:
