--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,11 @@ dependencies:
   flutter_localization: ^0.2.0
   flutter_native_splash: ^2.4.0
   flutter_screenutil: ^5.9.0
+  fluttertoast: ^8.2.5
   freezed_annotation: ^2.4.1
   get_it: ^7.7.0
-  
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.1.0
-  
   shared_preferences: ^2.2.3
 
 dev_dependencies:
@@ -51,8 +50,7 @@ flutter_icons:
 
 flutter:
 
- # dart run build_runner build --delete-conflicting-outputs
-
+  # dart run build_runner build --delete-conflicting-outputs
   uses-material-design: true
 
   assets:
